infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: depnoyed
  namespace: depnoyed-system
spec:
  type: ClusterIP
  selector:
    app: depnoyed
  ports:
    - port: 80
      targetPort: 3000
